--- a/app/views/application/finish.html.erb
+++ b/app/views/application/finish.html.erb
@@ -1,11 +1,22 @@
 <div class="full-height flex-column center col-12">
     <% finished = Answer.answers_by(current_user.id).length %>
+
     <% if (finished < 1) %>
         It seems you did not answer at least 1 question in Section 2.<br>
         <a href="/articles/1">Go back to Section 2 </a>
+
     <% elsif (!Surveyanswer.done?(current_user.id)) %>
-        It seems you did not answer all survey questions in Section 1.<br>
-        <a href="/articles/1/survey">Go back to Section 1 </a>
+        It seems you did not answer all survey questions in Section 1 or 3.<br>
+        <a href="/articles/1/survey">Go back to Section 1 </a><br>
+        <a href="/articles/1/post_survey">Go back to Section 3 </a>
+
+    <% elsif (!current_user.passed) %>
+        <h1>Thank you! All finished!</h1>
+        However, it seems you didnot read the article.<br>
+        We will go through your answers and if the answers do not make sense, we will have to decline your work.<br>
+        If you got the question wrong but still believe you read the article, please contact us.<br>
+
+
     <% else %>
         <h1>Thank you! All finished!</h1>
         <!-- <p>Your payment will be $1 + <%= finished %> questions * $0.1 = <strong>$<%= (1 + 0.1 * finished).round(3) %></strong> in total.</p> -->
