--- a/app/views/articles/survey.html.erb
+++ b/app/views/articles/survey.html.erb
@@ -11,7 +11,7 @@
 
     <div class="task mb-1 col-12">
         <div class="mt-1">
-        If you do not understand the question or know the answer, <br>
+        If you have no idea what the answer is, <br>
         please choose <strong>"I do not know"</strong> rather than choosing a random option.
         </div>
         <ul class="collapsible survey">
