--- a/app/views/articles/post_survey.html.erb
+++ b/app/views/articles/post_survey.html.erb
@@ -12,12 +12,12 @@
     <div class="task mb-1 col-12">
         <ul class="collapsible survey">
 
-            <% Surveytask.all.last(6).each do |t| %>
+            <% Surveytask.all.last(6).each_with_index do |t, index| %>
                 <% if t.surveyanswers.where(user_id: current_user.id).length == 0 %>
 
                     <li class="done">
                         <div class="collapsible-header">
-                            <%= t.id %>. &nbsp;<b><%= t.question %></b>
+                            <%= index + 1 %>. &nbsp;<b><%= t.question %></b>
                             <i class="material-icons">keyboard_arrow_down</i>
                         </div>
                         <div id="task-<%= t.id %>" class="collapsible-body">
