--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,19 +14,72 @@
 
   <body>
     <nav class="bar noselect">
-    
-    <% if !@direction.nil? %>
-      <b><%= @direction.html_safe %></b>
-    <% end %>
+
+    <span>
+      <button class="btn" data-custom-open="instruction" role="button">Instruction</button>
+      
+      <% if !@direction.nil? %>
+        <b> &nbsp; <%= @direction.html_safe %></b>
+      <% end %>
+    </span>
 
     <% if !@show_next.nil? %>
-      <a id="nextBtn" class="btn col-2 text-center" href="/articles/1/post_survey"><b>Goto next</b></a>
+      <a id="nextBtn" class="btn col-2 text-center" href="/articles/1/post_survey"><b>Go to next</b></a>
     <% end %>
 
     </nav>
     <div class="wrapper">
       <%= yield %>
     </div>
+
+
+  <div class="modal micromodal-slide" id="instruction" aria-hidden="true">
+    <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+      <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+        <header class="modal__header">
+          <h2 class="modal__title" id="modal-1-title">
+              Instruction
+          </h2>
+
+          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+        </header>
+
+        <main class="modal__content" id="modal-1-content">
+            <p>
+                There are 3 sections in this task. You cannot go back to previous section, once you leave it.<br><br>
+            </p>
+
+            <p>
+                <strong>Section 1. Survey</strong><br>
+                In this section, you <strong>must</strong> answer <strong>all</strong> survey questions.<br><br>
+            </p>
+
+            <p>
+                <strong>Section 2. Reading an article</strong><br>
+                In this section, you'll <strong>read a news article</strong> and <strong>answer questions</strong> about the article.<br>
+                While answering questions is <strong class="red">optional</strong>, reading the article is <strong class="red">required</strong>.<br>
+                You can move on to the next part <strong class="red">anytime</strong>, but cannot come back once you leave.<br><br>
+            </p>
+
+            <p>
+                <strong>Section 3. Survey</strong><br>
+                In this section, you <strong>must</strong> answer <strong>all</strong> survey questions.<br>
+                There is a question that you can get correct only if you read the article in section 2, so <strong>make sure you read it</strong>.<br>
+                <strong>If you get it wrong, you will get <span class="red">disadvantage</span></strong>. <br><br>
+
+            </p>
+
+            <p>
+                After you finish the 3 sections above, you will be shown a page with <span class="red">finish token</span>.<br>
+                Please submit this token back in mTurk task page.
+                Thanks so much :) 
+            </p>
+        </main>
+
+      </div>
+    </div>
+  </div>
+
   </body>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
