--- a/app/views/application/finish.html.erb
+++ b/app/views/application/finish.html.erb
@@ -1,11 +1,7 @@
 <div class="full-height flex-column center col-12">
     <% finished = Answer.answers_by(current_user.id).length %>
 
-    <% if (finished < 1) %>
-        It seems you did not answer at least 1 question in Section 2.<br>
-        <a href="/articles/1">Go back to Section 2 </a>
-
-    <% elsif (!Surveyanswer.done?(current_user.id)) %>
+    <% if (!Surveyanswer.done?(current_user.id)) %>
         It seems you did not answer all survey questions in Section 1 or 3.<br>
         <a href="/articles/1/survey">Go back to Section 1 </a><br>
         <a href="/articles/1/post_survey">Go back to Section 3 </a>
