change token this time

--- a/app/views/application/finish.html.erb
+++ b/app/views/application/finish.html.erb
@@ -11,11 +11,11 @@
         However, it seems you didnot read the article.<br>
         We will go through your answers and if the answers do not make sense, we will have to decline your work.<br>
         If you got the question wrong but still believe you read the article, please contact us.<br>
-
+        <p>Go back to the mTurk page and submit this token: <b>sfekogkwokgowkgowke</b></p>
 
     <% else %>
         <h1>Thank you! All finished!</h1>
         <!-- <p>Your payment will be $1 + <%= finished %> questions * $0.1 = <strong>$<%= (1 + 0.1 * finished).round(3) %></strong> in total.</p> -->
-        <p>Go back to the mTurk page and submit this token: <b>asqjogenml2m1qfsdb</b></p>
+        <p>Go back to the mTurk page and submit this token: <b>sfekogkwokgowkgowkepassed</b></p>
     <% end %>
 </div>
