no duplication allowed

--- a/app/views/application/wrong.html.erb
+++ b/app/views/application/wrong.html.erb
@@ -2,3 +2,8 @@
 We could not detect your mTurk worker ID.<br>
 Please go back to <a>task entrance page</a> in mTurk, and enter your worker ID properly before clicking the "go to task" button.
 </h3>
+
+<h3>
+Or you might already have done this task. <br>
+We don't allow duplication.
+</h3>
