--- a/app/assets/stylesheets/components/_base.scss
+++ b/app/assets/stylesheets/components/_base.scss
@@ -360,3 +360,44 @@ button, .btn {
       border: 1px solid $grey-color-light;
     }
   }
+
+  /* global */
+
+ hr {
+  border: 1px solid #e3e8ea
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.full-height {
+  height: calc( 100vh - 60px);
+  overflow: scroll;
+  position: relative;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.hidden {
+  display: none !important;
+}
