partial view 경로 수정

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,7 +15,7 @@
 
     <div class="task">
         <ul class="collapsible">
-            <%= render partial: "partials/task" %>
+            <%= render partial: "articles/partials/_task" %>
         </ul>
     </div>
     
