--- a/app/views/articles/survey.html.erb
+++ b/app/views/articles/survey.html.erb
@@ -25,7 +25,7 @@
                             <i class="material-icons">keyboard_arrow_down</i>
                         </div>
                         <div id="task-<%= t.id %>" class="collapsible-body">
-                            <%= render partial: "partials/survey_form", locals: {task: t} %>
+                            <%= render partial: "articles/articles/partials/survey_form", locals: {task: t} %>
                         </div>
                     </li>
 
