[formative] to reflect task randomization

--- a/app/views/articles/create_answer.js.erb
+++ b/app/views/articles/create_answer.js.erb
@@ -2,13 +2,13 @@ console.log("highlight: <%= highlight %>")
 
 // redirect to next page
 <% if (highlight > 0) %>
-    $("#formContainer").html("<%= escape_javascript( render(:partial => 'edit_form', locals: {answer: @answer}) )%>");
+    $("#formContainer").html("<%= escape_javascript( render(:partial => 'articles/partials/edit_form', locals: {answer: @answer}) )%>");
 
     document.getElementById("highlightContainer").innerHTML = "";
 
     <% @answer.value_array.each_with_index do |v, i| %>
         <% if !@current_task.highlights_arr.include?(v) %>
-            document.getElementById("highlightContainer").innerHTML += "<div class='highlightContainer'><%= escape_javascript( render(:partial => 'annotate', locals: {answer: @answer, index: i + 1}) )%></div>";
+            document.getElementById("highlightContainer").innerHTML += "<div class='highlightContainer'><%= escape_javascript( render(:partial => 'articles/partials/annotate', locals: {answer: @answer, index: i + 1}) )%></div>";
         <% end %>
     <% end %>
 
@@ -24,7 +24,7 @@ console.log("highlight: <%= highlight %>")
     $(".startHighlight")[0].click();
 
 <% else %>
-    $(".collapsible").html("<%= escape_javascript(render(:partial => 'task', locals: {answer: @answer}))%>");
+    $(".collapsible").html("<%= escape_javascript(render(:partial => 'articles/partials/task', locals: {answer: @answer}))%>");
     swal("Thank you", "Successfully saved!", "success");
     instance.open(0);
 <% end %>
