--- a/app/views/articles/partials/_edit_form.html.erb
+++ b/app/views/articles/partials/_edit_form.html.erb
@@ -38,6 +38,6 @@
 
     <div class="action">
         <input type="hidden" name="time" value="0" />
-        <%= submit_tag("Click to change your answer", :class => "btn") %>
+        <%= submit_tag("Click to change your answer and submit", :class => "btn") %>
     </div>
 <% end %>
