--- a/app/views/articles/partials/_task.html.erb
+++ b/app/views/articles/partials/_task.html.erb
@@ -1,7 +1,13 @@
-    <div>
+    <!--div>
     You've answered 
     <strong><%= Answer.answers_by(current_user.id).length %></strong>
     questions!
+    </div-->
+
+    <div>
+    Article is credible: 60% <br>
+    Article is not credible: 40% <br>
+    Solving this question can change the score of 5%p at maximum. <br>
     </div>
 
     <li class="<%= @task.kind %>">
