--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     </span>
 
     <% if !@show_next.nil? %>
-      <a id="nextBtn" class="btn col-2 text-center" href="/articles/1/post_survey"><b>Go to next</b></a>
+      <a id="nextBtn" class="btn col-2 text-center" href="/articles/1/post_survey"><b>Go to next section</b></a>
     <% end %>
 
     </nav>
@@ -50,7 +50,7 @@
             </p>
 
             <p>
-                <strong>Section 1. Survey</strong><br>
+                <strong>Section 1 & 3. Survey</strong><br>
                 In this section, you <strong>must</strong> answer <strong>all</strong> survey questions.<br><br>
             </p>
 
@@ -60,7 +60,7 @@
                 While answering questions is <strong class="red">optional</strong>, reading the article is <strong class="red">required</strong>.<br>
                 You can move on to the next part <strong class="red">anytime</strong>, but cannot come back once you leave.<br><br>
             </p>
-
+        <!--
             <p>
                 <strong>Section 3. Survey</strong><br>
                 In this section, you <strong>must</strong> answer <strong>all</strong> survey questions.<br>
@@ -68,6 +68,7 @@
                 <strong>If you get it wrong, you will get <span class="red">disadvantage</span></strong>. <br><br>
 
             </p>
+        -->
 
             <p>
                 After you finish the 3 sections above, you will be shown a page with <span class="red">finish token</span>.<br>
