--- a/app/views/articles/survey.html.erb
+++ b/app/views/articles/survey.html.erb
@@ -11,12 +11,13 @@
 
     <div class="task mb-1 col-12">
         <div class="mt-1">
-        If you have no idea what the answer is, <br>
-        please choose <strong>"I do not know"</strong> rather than choosing a random option.
+        <!--If you have no idea what the answer is, <br>
+        please choose <strong>"I do not know"</strong> rather than choosing a random option.-->
+        Please answer the following question.
         </div>
         <ul class="collapsible survey">
 
-            <% Surveytask.all.take(7).each do |t| %>
+            <% Surveytask.all.take(1).each do |t| %>
                 <% if t.surveyanswers.where(user_id: current_user.id).length == 0 %>
 
                     <li class="done">
@@ -25,7 +26,7 @@
                             <i class="material-icons">keyboard_arrow_down</i>
                         </div>
                         <div id="task-<%= t.id %>" class="collapsible-body">
-                            <%= render partial: "articles/articles/partials/survey_form", locals: {task: t} %>
+                            <%= render partial: "articles/partials/survey_form", locals: {task: t} %>
                         </div>
                     </li>
 
