--- a/app/views/articles/partials/_survey_form.html.erb
+++ b/app/views/articles/partials/_survey_form.html.erb
@@ -13,6 +13,9 @@
         </div>
         <textarea class="col-12" name="motivation" placeholder="Please write more than 40 letters (required)"></textarea>
 
+    <% elsif task.classification == "insights" %>
+        <textarea class="col-12" name="motivation" placeholder="Please write more than 40 letters (required)"></textarea>
+
     <% elsif task.kind == "single" %>
         <div class="options">
             <% task.options_arr.each_with_index do |o, i| %>
@@ -22,7 +25,7 @@
 
         <% if task.classification != "content" %>
         <div><b>Why?</b> &nbsp;
-            <input class="col-9 mb-1" type="text" name="reason" placeholder="Tell us why (optional)" />
+            <input class="col-9 mb-1" type="text" name="reason" placeholder="Tell us why" />
         </div>
         <% end %>
 
