--- a/app/views/articles/survey.html.erb
+++ b/app/views/articles/survey.html.erb
@@ -9,7 +9,7 @@
     </div> -->
 
 
-    <div class="task mb-1 col-12">
+    <div class="task mb-1 col-12 down">
         <div class="mt-1">
         <!--If you have no idea what the answer is, <br>
         please choose <strong>"I do not know"</strong> rather than choosing a random option.-->
@@ -37,3 +37,8 @@
 
     </div>
 </section>
+<style>
+.down {
+    z-index: -50;
+}
+</style>
