--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -145,4 +145,5 @@
   .micromodal-slide .modal__container,
   .micromodal-slide .modal__overlay {
     will-change: transform;
+    z-index: 50;
   }
