--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,21 +45,27 @@
         </header>
 
         <main class="modal__content" id="modal-1-content">
-            <p>
-                There are 2 sections in this task. You cannot go back to previous section, once you leave it.<br><br>
-            </p>
-
-            <p>
-                <strong>Section 1. Reading an article</strong><br>
-                In this section, you'll <strong>read a news article</strong> and <strong>answer questions</strong> about the article.<br>
-                While answering questions is <strong class="red">optional</strong>, reading the article is <strong class="red">required</strong>.<br>
-                You can move on to the next part <strong class="red">anytime</strong>, but cannot come back once you leave.<br><br>
-            </p>
-
-            <p>
-                <strong>Section 2. Survey</strong><br>
-                In this section, you <strong>must</strong> answer <strong>all</strong> survey questions.<br><br>
-            </p>
+          <p>
+              There are 3 sections in this task, and it will take approximately 30 minutes in total.<br>
+              You cannot go back to previous section, once you leave it.
+          </p>
+          <br>
+          <p>
+              <strong>Section 1. Pre-experiment Survey</strong><br>
+              In this section, you <strong>must</strong> answer <strong>all</strong> survey questions.
+          </p>
+          <br>
+          <p>
+              <strong>Section 2. Logical Fallacy Judgement</strong><br>
+              In this section, you will learn the concept of false dilemma with representative examples.<br>
+              After then, you will read 44 tweets from politicians and judge whether each tweet has false dilemma or not.
+          </p>
+          <br>
+          <p>
+              <strong>Section 3. Post-experiment Survey</strong><br>
+              In this section, you should complete a questionnaire based on your experience in Section 2.
+          </p>
+          <br>
 
 
         <!--
@@ -74,8 +80,11 @@
 
             <p>
                 After you finish all sections above, you will be shown a page with <span class="red">finish token</span>.<br>
-                Please submit this token back in mTurk task page.
-                Thanks so much :) 
+                Please submit this token back in mTurk task page.<br><br>
+                You can always decide not to participate in the experiment and can withdraw your participation anytime.<br>
+                Even if you refuse to participate in this research, you will not be disadvantaged at all.<br><br>
+                If you have any questions or wish to express any discomfort related to this research, please feel free to contact the researcher below.<br>
+                <strong>Name of researcher: Donghoon Han, Contact: hoonhan.d@kaist.ac.kr</strong>
             </p>
         </main>
 
