--- a/app/assets/stylesheets/components/_articles.scss
+++ b/app/assets/stylesheets/components/_articles.scss
@@ -2,11 +2,38 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+.reasoning {
+    font-family: $article-font-family;
+
+    width: 100%;
+    height: 6em;
+}
+
+#reason_pos{
+    font-family: $article-font-family;
+
+    width: 80%;
+    height: 3em;
+    background-color: lightblue;
+}
+
+
+#reason_neg{
+    font-family: $article-font-family;
+
+    width: 80%;
+    height: 3em;
+    background-color: lightcoral;
+}
+
 // list
 
 .list, .article {
-    margin-left: 2rem;
-    background-color: #fff;
+    margin-top : 20%;
+    margin-left: 10rem;
+    width: 800px;
+    background-color: #ffffff;
     padding: 1rem 2rem 4rem;
     font-size: .95em;
 } 
@@ -153,7 +180,7 @@
             }
         }
         .collapsible-body {
-            display: none;
+            //display: none;
             background-color: #fff;
             border-top: transparent;
             line-height: 1.8;
